--- a/SortingAlgorithmAnalysis/SortingAlgorithmAnalysis.csproj
+++ b/SortingAlgorithmAnalysis/SortingAlgorithmAnalysis.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -21,10 +22,14 @@
     <None Remove="OxyPlot.Xamarin.Forms" />
     <None Remove="Pages\" />
     <None Remove="ViewModels\" />
+    <None Remove="Models\" />
+    <None Remove="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Pages\" />
     <Folder Include="ViewModels\" />
+    <Folder Include="Models\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Pages\MainPage.xaml.cs">
