--- a/SortingAlgorithmAnalysis/SortingAlgorithmAnalysis.csproj
+++ b/SortingAlgorithmAnalysis/SortingAlgorithmAnalysis.csproj
@@ -24,12 +24,14 @@
     <None Remove="ViewModels\" />
     <None Remove="Models\" />
     <None Remove="Helpers\" />
+    <None Remove="ManualCalculations\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Pages\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Models\" />
     <Folder Include="Helpers\" />
+    <Folder Include="ManualCalculations\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Pages\MainPage.xaml.cs">
